benden css ci olmazmış bunu anladım bu pushda

--- a/src/styles/cv/cv.css
+++ b/src/styles/cv/cv.css
@@ -54,19 +54,23 @@
         padding: 0;
         text-align: center;
     }
+    .cv-basic-info{
+        padding: 0;
+    }
 }
 /* İLETİŞİM */
 .cv-contact{
     display: flex;
     flex-direction: row;
     padding: 20px 0 0 0;
-    border: 1px solid black;
-    margin: 20px;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 .cv-contact-info{
     display: flex;
     flex: 1;
-    padding: 0 20px 0 0;
+    padding: 0;
     justify-content: space-around;
 }
 .cv-contact-info-item{
@@ -75,7 +79,7 @@
     padding: 0 0 10px 0;
 }
 .cv-contact-info-item i{
-    padding: 0 10px 0 0;
+    padding: 5px 10px 0 0;
 }
 .cv-contact-info-item p{
     margin: 0;
@@ -89,4 +93,60 @@
     .cv-contact-info-item{
         padding: 0 0 20px 0;
     }
+}
+/* About */
+.cv-about{
+    padding: 20px 0 0 0;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    padding: 2.5em 1.5em;
+    margin: 1em 0;
+}
+.cv-about p{
+    margin: 0;
+    padding: 0 0 10px 0;
+}
+/* TECRÜBELER */
+.cv-experience{
+    padding: 20px 0 0 0;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+.cv-experience-info{
+    display: flex;
+    flex-direction: column;
+    padding: 0em 2em 2em 2em;
+}
+.cv-experience-info-item{
+    display: flex;
+    flex: 1;
+    padding: 0 0 0 0px;
+    margin-bottom: 0em;
+    border-left: 1px dashed black;
+}
+.cv-experience-info-item-details{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+.cv-experience-info-item h4{
+    margin: 0;
+    padding: 0 0 10px 0;
+    font-size: 1.5em;
+}
+.cv-experience-info-item p{
+    margin: 0;
+    padding: 0 0 10px 0;
+}
+.cv-experience-info-item span{
+    color: #999;
+}
+.cv-experience-info .cv-experience-info-item + .cv-experience-info-item{
+    border-left: 1px dashed black;
+}
+.timeline-dot{
+    position: relative;
+    top: 3.7em;
 }
